<resources>
    <string name="app_name">Staddle</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fb_app_id">800414636999322</string>
    <string name="fb_login_protocol_scheme">fb800414636999322</string>

    <string name="log_in">Login</string>
    <string name="phone_number_or_email_id">Phone number or Email id</string>
    <string name="password">Password</string>
    <string name="let_me_in">Let me in !</string>
    <string name="connect_with">Connect with</string>

    <string name="sign_up_here">Sign Up Here</string>
    <string name="or">OR</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email_id">Email id</string>
    <string name="i_am_me_in">I am me in !</string>

    <string name="forgot_password">Forgot password ?</string>
    <string name="how_you_want_to_reset_the_password">How you want to reset the password ?</string>
    <string name="send_me_link">Send me link !</string>
    <string name="order_history">Order History</string>
    <string name="home_no">Flat/House No</string>
    <string name="home_address">Home Address</string>
    <string name="city">City</string>
    <string name="landmark">LandMark</string>
    <string name="place_api" translatable="false">AIzaSyDQbT3t9VGgAitac_a4a9TtdsjFVu_cRP4</string>
    <string name="state">State</string>
    <string name="error_empty_fileds">This Filed Required</string>
    <string name="invalid_home_no">Invalid Flat/House No</string>
    <string name="invalid_location">Invalid Location</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="invalid_pincode">Invalid Pincode</string>
    <string name="invalid_phone">Invalid Phone Number</string>
    <string name="invalid_landmark">Invalid Landmark</string>
    <string name="location">Location</string>
    <string name="emoji">Lets start looking at our services &#128522;</string>
    <string name="mapapi">AIzaSyCZXkop7Qx7AS1Nv_jjlsISYs7IS0U4Uv4</string>
    <!--        <string name="default_web_client_id">819544222004-220uu2aku1ku7quel6butr9sl1i8t5as.apps.googleusercontent.com</string>-->


</resources>
