<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_10"
    android:background="@drawable/shape_dialog_delete_post"
    android:orientation="vertical"
    android:padding="@dimen/padding_20">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Set your delivery locations"
        android:textColor="@android:color/black"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/edtLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_get_input_rounded"
        android:gravity="center_vertical"
        android:hint="@string/location"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtHomeNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_get_input_rounded"
        android:gravity="center_vertical"
        android:hint="@string/home_no"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtLandMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_get_input_rounded"
        android:gravity="center_vertical"
        android:hint="@string/landmark"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPincode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_get_input_rounded"
        android:gravity="center_vertical"
        android:hint="Pincode"
        android:imeOptions="actionNext"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@drawable/shape_get_input_rounded"
        android:gravity="center_vertical"
        android:hint="Phone Number"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:padding="@dimen/margin_10"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        tools:ignore="Autofill" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_not_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:text="Not Now"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <TextView
            android:id="@+id/btn_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:text="Yes"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            tools:ignore="HardcodedText,RtlHardcoded" />

    </LinearLayout>

</LinearLayout>