<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg_new"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/app_logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/shape_transparent"
                android:orientation="vertical"
                android:padding="@dimen/padding_5">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_25" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/how_you_want_to_reset_the_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_17" />


                <EditText
                    android:id="@+id/edt_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/shape_get_input_rounded"
                    android:hint="Phone number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:padding="@dimen/padding_8"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:visibility="gone" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_15"
                    android:layout_marginBottom="@dimen/margin_15"
                    android:text="OR"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_21"
                    android:visibility="gone" />


                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/shape_get_input_rounded"
                    android:hint="Please enter email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding_8"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:id="@+id/ll_btn_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_40"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/shape_get_input_rounded"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:text="@string/send_me_link"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>