<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bg_new"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_25"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/app_logo"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_25"
                android:layout_marginEnd="@dimen/margin_10"
                android:background="@drawable/shape_transparent"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_25" />

                <LinearLayout
                    android:id="@+id/ll_phone_or_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/shape_get_input_rounded"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edt_phone_or_emailo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:background="@null"
                        android:hint="@string/phone_number_or_email_id"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_get_input_rounded"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/edt_passwordo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10"
                        android:background="@null"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </LinearLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_get_input_rounded"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/edt_phone_or_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawablePadding="5dp"
                        android:hint="@string/phone_number_or_email_id"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:padding="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/shape_get_input_rounded"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:drawablePadding="5dp"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:paddingLeft="10dp"
                        android:textColor="@color/white"

                        android:textColorHint="@color/white" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:id="@+id/ll_btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/shape_get_input_rounded"
                    android:orientation="vertical"
                    android:padding="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_30"
                        android:layout_marginEnd="@dimen/margin_30"
                        android:text="Login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/btn_txt_size" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15">

                    <TextView
                        android:id="@+id/tv_new_user_registration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/sign_up_here"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_btn_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black" />

                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_18" />

            <LinearLayout
                android:id="@+id/ll_media_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_35"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_5"
                android:background="@drawable/shape_transparent"
                android:orientation="horizontal"
                android:weightSum="5">

                <LinearLayout
                    android:id="@+id/ll_connect_with"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Connect with"
                        android:textColor="@color/black" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:weightSum="2"
                    tools:ignore="DisableBaselineAlignment">

                    <LinearLayout
                        android:id="@+id/ll_google"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_40"
                        android:layout_margin="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/shape_circle">

                        <ImageView
                            android:id="@+id/iv_google"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:padding="3dp"
                            android:src="@drawable/ic_google_plus" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_linked_in"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_40"
                        android:layout_margin="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/shape_circle"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/iv_linked_in"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:padding="3dp"
                            android:src="@drawable/ic_linkedin" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_40"
                        android:layout_margin="@dimen/margin_5"
                        android:layout_weight="1"
                        android:background="@drawable/shape_circle">

                        <ImageView
                            android:id="@+id/iv_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:padding="3dp"
                            android:src="@drawable/ic_facebook" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
